PyMaker/datas/object2/RawHTML/i16601/Python_DOC_referPages.syntax-error-with-beautifulsoup.txt
<div class="post-text" itemprop="text">
<p>I've gone through so many documentation but they don't offer examples like this. I've tried to debug this for over 3 hours, but still doesn't work. </p>
<pre><code>import urllib.request, string, csv
from bs4 import BeautifulSoup

csvfile = open('people.csv', 'w')
csvwriter = csv.writer(csvfile, dialect='excel')

peoplefile = open('people.txt', 'r')
soup = BeautifulSoup(timfile.read())
tag = soup.marker

for tag in soup.find_all('marker'):
    print tag['firstname']
    data=[[tag['firstname'], tag['lastname']]]
    csvwriter.writerows(data)

csvfile.close()
peoplefile.close()
</code></pre>
<p>I get this message from command prompt:</p>
<pre><code>(everything before is fine)...
&gt;&gt;&gt; tag = soup.marker
&gt;&gt;&gt; for tag in soup.find_all('marker'):
...     print tag['firstname']
  File "&lt;stdin&gt;", line 2
    print tag['firstname']
            ^
SyntaxError: invalid syntax
&gt;&gt;&gt;     data=[[tag['firstname'], tag['lastname']]]
  File "&lt;stdin&gt;", line 1
    data=[[tag['firstname'], tag['lastname']]]
    ^
IndentationError: unexpected indent
&gt;&gt;&gt;     csvwriter.writerows(data)
  File "&lt;stdin&gt;", line 1
    csvwriter.writerows(data)
    ^
IndentationError: unexpected indent
&gt;&gt;&gt;
... csvfile.close()
&gt;&gt;&gt; peoplefile.close()
&gt;&gt;&gt;
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>In python3 you need to treat <code>print</code> as a function:</p>
<pre><code>print(tag['firstname'])
</code></pre>
<p>instead of</p>
<pre><code>print tag['firstname']
</code></pre>
<p>See this <a href="https://docs.python.org/3/whatsnew/3.0.html" rel="nofollow">Python3 release notes</a>:</p>
<blockquote>
<p>The print statement has been replaced with a print() function, with keyword arguments to replace most of the special syntax of the old print statement</p>
</blockquote>
</div>
<span class="comment-copy">Thank you, what does this keyerror mean? &gt;&gt;&gt; print(tag['firstname']) Traceback (most recent call last):   File "&lt;stdin&gt;", line 1, in &lt;module&gt;   File "C:\Python34\lib\site-packages\beautifulsoup4-4.3.2-py3.4.egg\bs4\element .py", line 905, in <b>getitem</b> KeyError: 'firstname'</span>
<span class="comment-copy">It means that the key <code>firstname</code> doesn't exist in your dictionary <code>tag</code></span>
<span class="comment-copy">try <code>print(tag.keys())</code> to see all keys available to you.</span>
<span class="comment-copy">Are you printing that from the python shell? You need to put that after the line <code>for tag in soup.find_all('marker'):</code></span>
<span class="comment-copy">OMG I got it by getting rid of an extra &gt; between tags in the raw html file. Thanks, and love you!</span>
